--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -83,13 +83,35 @@
     <Compile Include="PortPool.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Requests\CheckSafetyConstraints.cs" />
+    <Compile Include="Requests\GetPorts.cs" />
     <Compile Include="Requests\GetRegister.cs" />
+    <Compile Include="Requests\GetRegisterValue.cs" />
+    <Compile Include="Requests\GetServos.cs" />
+    <Compile Include="Requests\Index.cs" />
+    <Compile Include="Requests\InitialiseAll.cs" />
     <Compile Include="Requests\IRequest.cs" />
+    <Compile Include="Requests\MoveServo.cs" />
+    <Compile Include="Requests\Refresh.cs" />
+    <Compile Include="Requests\Scheduler.cs" />
     <Compile Include="Requests\SetRegister.cs" />
+    <Compile Include="Requests\SetRegisterValue.cs" />
+    <Compile Include="Requests\ShutdownAll.cs" />
+    <Compile Include="Safety\Constraints.cs" />
+    <Compile Include="Scheduler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="InitialiseRegisters.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
+    <None Include="SafetyConstraints.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <Content Include="Schedule.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\packages\AsyncUsageAnalyzers.1.0.0-alpha003\analyzers\dotnet\AsyncUsageAnalyzers.dll" />
@@ -100,5 +122,6 @@
       <Name>DynamixelSDKSharp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
