--- a/Samples/HaloTestHarness/HaloTestHarness/App.config
+++ b/Samples/HaloTestHarness/HaloTestHarness/App.config
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="HaloTestHarness.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+    <userSettings>
+        <HaloTestHarness.Properties.Settings>
+            <setting name="axis2LimitOffset" serializeAs="String">
+                <value>50</value>
+            </setting>
+        </HaloTestHarness.Properties.Settings>
+    </userSettings>
 </configuration>
