TestHarness: Use end-stop (rather than center + 1 limit) calibration, and pull limit offset values from App.Config

--- a/Samples/HaloTestHarness/HaloTestHarness/App.config
+++ b/Samples/HaloTestHarness/HaloTestHarness/App.config
@@ -10,6 +10,9 @@
     </startup>
     <userSettings>
         <HaloTestHarness.Properties.Settings>
+            <setting name="axis1LimitOffset" serializeAs="String">
+                <value>50</value>
+            </setting>
             <setting name="axis2LimitOffset" serializeAs="String">
                 <value>50</value>
             </setting>
