--- a/Samples/HaloTestHarness/HaloTestHarness/Properties/Settings.settings
+++ b/Samples/HaloTestHarness/HaloTestHarness/Properties/Settings.settings
@@ -2,6 +2,9 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HaloTestHarness.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
+    <Setting Name="axis1LimitOffset" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
     <Setting Name="axis2LimitOffset" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
