TestHarness: Read serial port configuration from App.Config.

--- a/Samples/HaloTestHarness/HaloTestHarness/App.config
+++ b/Samples/HaloTestHarness/HaloTestHarness/App.config
@@ -16,6 +16,12 @@
             <setting name="axis2LimitOffset" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="SerialPort" serializeAs="String">
+                <value>COM3</value>
+            </setting>
+            <setting name="BaudRate" serializeAs="String">
+                <value>115200</value>
+            </setting>
         </HaloTestHarness.Properties.Settings>
     </userSettings>
 </configuration>
