--- a/Samples/HaloTestHarness/HaloTestHarness/Properties/Settings.settings
+++ b/Samples/HaloTestHarness/HaloTestHarness/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="axis2LimitOffset" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
+    <Setting Name="SerialPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)">COM3</Value>
+    </Setting>
+    <Setting Name="BaudRate" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">115200</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
