TestHarness: Various Elliot enhancements.

--- a/Samples/HaloTestHarness/HaloTestHarness/App.config
+++ b/Samples/HaloTestHarness/HaloTestHarness/App.config
@@ -22,6 +22,18 @@
             <setting name="BaudRate" serializeAs="String">
                 <value>115200</value>
             </setting>
+            <setting name="ProfileVelocity" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="ProfileAcceleration" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="PositionIGain" serializeAs="String">
+                <value>100</value>
+            </setting>
+            <setting name="PositionEpsilon" serializeAs="String">
+                <value>1</value>
+            </setting>
         </HaloTestHarness.Properties.Settings>
     </userSettings>
 </configuration>
