--- a/DynamixelSDKSharp/DynamixelSDKSharp.csproj
+++ b/DynamixelSDKSharp/DynamixelSDKSharp.csproj
@@ -75,6 +75,9 @@
     <Compile Include="WorkerThread.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="dxl_x64_c.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ProductDatabase\Products.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -85,12 +88,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="dxl_x64_c.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="dxl_x86_c.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <ProjectReference Include="..\..\DynamixelSDK\c\build\win64\dxl_x64_c\dxl_x64_c.vcxproj">
+      <Project>{aadd25b2-529e-4716-aabf-cb1b2de3631c}</Project>
+      <Name>dxl_x64_c</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
