--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Requests\Calibrate\LogServoValues.cs" />
     <Compile Include="Requests\Data\GetFreshestValues.cs" />
     <Compile Include="Requests\Data\GetHistoricalValues.cs" />
+    <Compile Include="Requests\Data\LogServos.cs" />
     <Compile Include="Requests\Group\GetDeltas.cs" />
     <Compile Include="Requests\Group\GotoByDatumMulti.cs" />
     <Compile Include="Requests\Group\GotoByDatum.cs" />
