--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Requests\Group\GotoByDatumMulti.cs" />
     <Compile Include="Requests\Group\GotoByDatum.cs" />
     <Compile Include="Requests\Group\Goto.cs" />
+    <Compile Include="Requests\Data\LogRegisterAllServos.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
     <Compile Include="Requests\Scheduler\Get.cs" />
