Dispatcher: Broadly functional NavigatePointToPoint endpoint.

--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -112,6 +112,9 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Models\Heliostat.cs" />
     <Compile Include="Models\HeliostatHAMParams.cs" />
+    <Compile Include="Models\HeliostatHAMPointToPointRequest.cs" />
+    <Compile Include="Models\HeliostatHAMPointToPointResponse.cs" />
+    <Compile Include="Models\Vector3.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="PortPool.cs" />
     <Compile Include="Program.cs" />
@@ -128,6 +131,7 @@
     <Compile Include="Requests\Data\LogRegisterAllServos.cs" />
     <Compile Include="Requests\Group\MoveAndLogAll.cs" />
     <Compile Include="Requests\Heliostat\Calibrate.cs" />
+    <Compile Include="Requests\Heliostat\NagivatePointToPoint.cs" />
     <Compile Include="Requests\Heliostat\Refresh.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
