--- a/Samples/Dispatcher/Dispatcher/packages.config
+++ b/Samples/Dispatcher/Dispatcher/packages.config
@@ -8,6 +8,8 @@
   <package id="Nancy" version="2.0.0-clinteastwood" targetFramework="net46" />
   <package id="Nancy.Hosting.Self" version="2.0.0-clinteastwood" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
+  <package id="NuGet.Build.Tasks.Pack" version="4.4.0" targetFramework="net46" />
+  <package id="Sharp3D.Math" version="1.0.3" targetFramework="net46" />
   <package id="Spark" version="1.7.0.0" targetFramework="net452" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net45" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
