Dispatcher: Fixed (partial) broken refactor that somehow made it to trunk.

--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -119,7 +119,7 @@
     <Compile Include="Models\Heliostat.cs" />
     <Compile Include="Models\HeliostatHAMParams.cs" />
     <Compile Include="Models\HeliostatHAMPointToPointRequest.cs" />
-    <Compile Include="Models\HeliostatHAMPointToPointResponse.cs" />
+    <Compile Include="Models\HeliostatHAMNavigateResponse.cs" />
     <Compile Include="Models\HeliostatHAMVectorToPointRequest.cs" />
     <Compile Include="Models\Vector3.cs" />
     <Compile Include="Module.cs" />
@@ -139,6 +139,7 @@
     <Compile Include="Requests\Group\MoveAndLogAll.cs" />
     <Compile Include="Requests\Heliostat\Calibrate.cs" />
     <Compile Include="Requests\Heliostat\NagivatePointToPoint.cs" />
+    <Compile Include="Requests\Heliostat\NavigateHeliostatsPointToPoint.cs" />
     <Compile Include="Requests\Heliostat\NavigateToSolar.cs" />
     <Compile Include="Requests\Heliostat\Refresh.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
