Dispatcher: Heliostat 'nudge' command, but really it should be called 'home'.

--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Requests\Heliostat\NavigateHeliostatsPointToPoint.cs" />
     <Compile Include="Requests\Heliostat\NavigateHeliostatsWithSolar.cs" />
     <Compile Include="Requests\Heliostat\NavigateToSolar.cs" />
+    <Compile Include="Requests\Heliostat\Nudge.cs" />
     <Compile Include="Requests\Heliostat\Refresh.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
