--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Database\DataRow.cs" />
     <Compile Include="Database\DataRowAttribute.cs" />
     <Compile Include="Database\HighFrequencyRequests.cs" />
+    <Compile Include="Database\Models\ManualCalibration.cs" />
     <Compile Include="Database\SystemLog.cs" />
     <Compile Include="Database\Registers.cs" />
     <Compile Include="Logger.cs" />
@@ -120,7 +121,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\API.cs" />
-    <Compile Include="Requests\Calibrate\LogServoValues.cs" />
+    <Compile Include="Requests\ManualCalibration\LogServoValues.cs" />
+    <Compile Include="Requests\ManualCalibration\ManualCalibrationLog.cs" />
+    <Compile Include="Requests\ManualCalibration\Prepare.cs" />
     <Compile Include="Requests\Data\GetFreshestValues.cs" />
     <Compile Include="Requests\Data\GetHistoricalValues.cs" />
     <Compile Include="Requests\Data\LogServos.cs" />
@@ -134,6 +137,8 @@
     <Compile Include="Requests\Heliostat\NagivatePointToPoint.cs" />
     <Compile Include="Requests\Heliostat\NavigateHeliostatsPointToPoint.cs" />
     <Compile Include="Requests\Heliostat\Refresh.cs" />
+    <Compile Include="Requests\ManualCalibration\Record.cs" />
+    <Compile Include="Requests\ManualCalibration\RecordDatum.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
     <Compile Include="Requests\Scheduler\Get.cs" />
