--- a/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
+++ b/Samples/Dispatcher/Dispatcher/Dispatcher.csproj
@@ -81,6 +81,7 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="Sharp3D.Math, Version=1.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sharp3D.Math.1.0.3\lib\net45\Sharp3D.Math.dll</HintPath>
     </Reference>
@@ -99,12 +100,15 @@
       <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
     </Reference>
     <Reference Include="System.Speech" />
+    <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Presentation" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoRouting.cs" />
@@ -112,6 +116,7 @@
     <Compile Include="Database\DataRow.cs" />
     <Compile Include="Database\DataRowAttribute.cs" />
     <Compile Include="Database\HighFrequencyRequests.cs" />
+    <Compile Include="Database\Models\ManualCalibration.cs" />
     <Compile Include="Database\Models\SolarVector.cs" />
     <Compile Include="Database\SystemLog.cs" />
     <Compile Include="Database\Registers.cs" />
@@ -127,7 +132,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Requests\API.cs" />
-    <Compile Include="Requests\Calibrate\LogServoValues.cs" />
     <Compile Include="Requests\Data\GetFreshestValues.cs" />
     <Compile Include="Requests\Data\GetHistoricalValues.cs" />
     <Compile Include="Requests\Data\LogServos.cs" />
@@ -144,6 +148,13 @@
     <Compile Include="Requests\Heliostat\NavigateToSolar.cs" />
     <Compile Include="Requests\Heliostat\Nudge.cs" />
     <Compile Include="Requests\Heliostat\Refresh.cs" />
+    <Compile Include="Requests\Heliostat\UpdatePosition.cs" />
+    <Compile Include="Requests\ManualCalibration\LogServoValues.cs" />
+    <Compile Include="Requests\ManualCalibration\ManualCalibrationLog.cs" />
+    <Compile Include="Requests\ManualCalibration\Prepare.cs" />
+    <Compile Include="Requests\ManualCalibration\Record.cs" />
+    <Compile Include="Requests\ManualCalibration\RecordDatum.cs" />
+    <Compile Include="Requests\RestletAPI.cs" />
     <Compile Include="Requests\Scheduler\Disable.cs" />
     <Compile Include="Requests\Scheduler\Enable.cs" />
     <Compile Include="Requests\Scheduler\Get.cs" />
