--- a/DynamixelSDKSharp/DynamixelSDKSharp.nuspec
+++ b/DynamixelSDKSharp/DynamixelSDKSharp.nuspec
@@ -4,15 +4,24 @@
     <id>$id$</id>
     <version>$version$</version>
     <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <authors>Elliot Woods</authors>
+    <owners>Kimchi and Chips</owners>
     <licenseUrl>https://github.com/elliotwoods/DynamixelSDKSharp/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/elliotwoods/DynamixelSDKSharp</projectUrl>
-    <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
+    <iconUrl>https://github.com/elliotwoods/DynamixelSDKSharp/blob/master/.resources/nuget_icon.png?raw=true</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
+    <releaseNotes>First release on NuGet.</releaseNotes>
     <copyright>Copyright 2018</copyright>
-    <tags>Tag1 Tag2</tags>
+    <tags>dynamixel servos actuators robotics motor</tags>
+    
+    <references>
+      <reference file="DynamixelSDKSharp.dll" />
+    </references>
+    
   </metadata>
+  <files>
+    <file src="lib\**\*.*" target="lib" />
+    <file src="build\DynamixelSDKSharp.targets" target="build" />
+  </files>
 </package>
